# TestCMake

./: CMakeLists.txt  Log  Matrix IST  Matrix SOLL  README.md  Text  kernel-Log  kernel-original.cl  main.cpp  misc.h  oct_processing.h  regression.h  transformations.h  util.h  vtk_model_sampling.h
Images/: All executions, 4 iterations.html  Step by Step execution time.html
Latex/: References.bib  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.dvi  Thesis.tex  Thesis.toc  thesis.out  thesis.out.bak
Latex/components/: Appendix.tex  Background.tex  FutureWork.tex  Introduction.tex  Method.tex  Results.tex  TSWLatexianTemp_000715.tex  abstract.tex  acknowledgements.tex  cover.tex  disclaimer.tex  titlepage.tex
Latex/images/: 3_7_drift.fig  3_7_drift_tex.pdf_tex  3_7_tex.pdf_tex  IK_refactored_2.pdf_tex  IK_solution_tex.pdf_tex  alignment_error_section_refactored.pdf_tex  curved_needle.pptx  drift_tex.pdf_tex  injection_illustration.pptx  injection_illustration2.pptx  injection_illustration_refactored_tex.pdf_tex  lambda.pptx  lambda_refactored_tex.pdf_tex  large_step.fig  large_step_tex.pdf_tex  manipulator_overview_refactored_tex.pdf_tex  mechRCM.pptx  pcjm.pptx  pcjm_refactored_tex.pdf_tex  vrep_hierarchy.pptx  vrep_model.pptx  vrep_model_1_tex.pdf_tex
graphUtils/: GraphUtils.cpp
